freebase: reader_fill_object_gvalue() is only meant for "object" types

Compound types are only meant to be handled through
reader_fill_compound_gvalue(), which will iterate through its "property"
array. Otherwise, compound elements with an ID (which is not mandatory,
but ok for these to have) would be created as shallow objects instead
of containers of further objects/values.

https://bugzilla.gnome.org/show_bug.cgi?id=737539